--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="sv">
     <head>
         <meta name="geo.region" content="SE-AB" />
         <meta name="geo.placename" content="S&ouml;dert&auml;lje" />
         <meta name="geo.position" content="59.17;17.61" />
         <meta name="ICBM" content="59.17, 17.61" />
-
+        <meta name="keywords" content="Attefallshus, bygg, bygglovsfritt, bygglov, lov, kund, bolag, exterior, montering, nyckelfärdig, tillverkning, leverans, transport, producering, bygg hus, sovrum, badrum, vardagsrum, stuga, villa,
+        små hus, grind, staket, altan, fritid, fritidshus, 30kvm, 60kvm, 100kvm, m2, etta, plåt, tak, modul, modulhus, isolering, vägg, element, jag, vill, bygga, mitt, hus, byggmax, bauhaus, beijer, värme, golv, grund, plattgrund,
+        plintgrund, krypgrund, betong, pålitig, snickeri">
+        <meta name="description" content="Tillverkning av nyckelfärdiga attefallshus och leverans till vald plats samt montering och installering. Attefallshus är ett bygglovsfritt
+        hus som har en area på 30kvm med ett badrum, ett sovrum och ett vardagsrum. Interioren är uppbyggd utifrån kundens urval av golv, kakel, klinker, vägg och tak. ">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/css/style.css">
         <title>Bygg ditt hus</title>
@@ -21,7 +25,7 @@
             <!-- LANDING SECTION                                                                    -->
             <!-- ===============================================================================    -->
             <header class="site-section" id="showcase">
-                <h1 id="welcome-text">Vällkommen!</h1>
+                <h1 id="welcome-text">Välkommen!</h1>
                 <div class="bubble">
                     <p>Letar du efter nyckelfärdig attefallshus? Då är du på rätt plats!</p>
                     <ul>
@@ -76,7 +80,7 @@
 
                 <div id="gallery-intro-and-picture">
                     <div id="gallery-intro">
-                        <h1>Attefallhus</h1>
+                        <h2>Attefallhus</h2>
                         <p>Ett attefallshus är ett bygglovsfritt konstruktion som har ett area på högst 30kvm. Det valda huset tillverkas i vår fabrik vilket därefter transporteras och installeras på vald plats. Här nedan kan du se några av våra tidigare projekt.</p>    
                     </div>
                 </div>
@@ -86,40 +90,44 @@
                     <p id="slider-title">Bild Galleri</p>
                     <div id="slider">
                         <figure >
-                            <img alt="Framsida av ett attefallhus" src="/images/showoff/framsida.jpeg">
-                            <img alt="Baksida av ett attefallhus" src="/images/showoff/baksida.jpeg">
-                            <img alt="Gammal attefallhus projekt" src="/images/showoff/attehus1.jpg">
-                            <img alt="Kakel som vi laggt" src="/images/showoff/kakel.jpg">
-                            <img alt="Insida av ett attefallhus" src="/images/showoff/STAN.jpg">
-                            <img src="/images/showoff/framsida.jpeg">
+                            <div class="imgWrapper"><img alt="Framsida av ett attefallhus" src="/images/showoff/framsida.jpeg"></div>
+                            <div class="imgWrapper"><img alt="Baksida av ett attefallhus" src="/images/showoff/baksida.jpeg"></div>
+                            <div class="imgWrapper"><img alt="Gammal attefallhus projekt" src="/images/showoff/attehus1.jpg"></div>
+                            <div class="imgWrapper"><img alt="Kakel som vi laggt" src="/images/showoff/kakel.jpg"></div>
+                            <div class="imgWrapper"><img alt="Insida av ett attefallhus" src="/images/showoff/STAN.jpg"></div>
+                            <div class="imgWrapper"><img src="/images/showoff/framsida.jpeg"></div>             
                         </figure>
                     </div>
                 </div>
 
-                 <!-- Vide player -->
-                <video autoplay controls>
-                    <source src="videos/attefallhus.mp4" type="video/mp4"/>
-                    Din webbläsare stöder inte "mp4" videotyp! 
-                </video>
+                <div id="video-and-contact-wrapper">
+                     <!-- Vide player -->
+                     <video autoplay controls>
+                        <source src="videos/attefallhus.mp4" type="video/mp4"/>
+                        Din webbläsare stöder inte "mp4" videotyp! 
+                    </video>  
+                    
+                    <div id="contact-us-form-wrapper-pc">
+                        <h2>Kontakta oss</h2>
+                        <p>Mobilnummer: 0728710596</p>
+                    </div>
+                </div>
+            </div>  
+
+            <div id="contact-us-page">
+                <div id="contact-us-form-wrapper-mobile">
+                    <h2>Kontakta oss</h2>
+                    <p>Mobilnummer: 0728710596</p>
+                </div>
             </div>
 
             <footer id="footer">
-                <div id="contact-container">
-                    <h3>Kontakt</h3>
-                    <p>Mobilnummer: 0728710596</p>
-                </div>
-                <div id="reference-container">
+<!--                 <div id="reference-container">
                     <h3>Referenser</h3>
                     <a href="https://www.flaticon.com/free-icons/construction-worker" title="construction worker icons">Construction worker icons created by Flat Icons - Flaticon</a>
                     <a href="https://www.flaticon.com/free-icon/check_3472620?term=check&page=1&position=9&page=1&position=9&related_id=3472620&origin=tag" title="check icon">Check icon by Flat Icons</a>
-                </div>
-                <div id="other">
-                    <a href="https://www.geo-tag.de" title="This page contains geo-tags">
-                        <img    src="https://www.geo-tag.de/icon/geotag_l.png"
-                                width="97" height="32" style="border-style:none;"
-                                alt="This page contains geo-tags" />
-                    </a>
-                </div>
+                </div> -->
+                    <p>©2022</p>
             </footer>
         </div>
     </body>
